--- a/avaliacao2t-main/AVALIACAO2ANO-main/index.html
+++ b/avaliacao2t-main/AVALIACAO2ANO-main/index.html
@@ -16,7 +16,7 @@
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
 
-           <a href="#"><img class="container__imagem logo_costa" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a>
+           <a href="#"><img class="container__imagem logo_costa" src="img/floricultura.jpeg" alt="logotipo da biblioteca start"></a>
         </div>
         <div class="container">
            <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="meus Favoritos"></a>
@@ -29,16 +29,16 @@
             <span>
             </span>
             <div class="div-imagem">
-                <img class="Imagem" src="img/astronautas.jpg" alt="">
-                <h1 class="titulo">imagem 1</h1>
+                <img class="Imagem" src="img/orquideas.jpg" alt="">
+                <h1 class="titulo">orquideas</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/cachorro.jpg" alt="">
-                <h1 class="titulo">Imagem 2</h1>
+                <img class="Imagem" src="img/rosadodeserto.jpg" alt="">
+                <h1 class="titulo">rosadodeserto</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/campo.jpg" alt="">
-                <h1 class="titulo">Imagem 3</h1>
+                <img class="Imagem" src="img/rosa.jpg" alt="">
+                <h1 class="titulo">rosa</h1>
             </div>
             <span>
             </span>
@@ -46,32 +46,32 @@
             </span>
             <div class="div-imagem">
                 <img class="Imagem" src="img/flor.jpg" alt="">
-                <h1 class="titulo">Imagem 4</h1>
+                <h1 class="titulo">flores raras</h1>
             </div>
     
             <div class="div-imagem">
                 <img class="Imagem" src="img/girassol.jpg" alt="">
-                <h1 class="titulo">Imagem 5</h1>
+                <h1 class="titulo">girassol</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/livros.jpg" alt="">
-                <h1 class="titulo">Imagem 6</h1>
+                <img class="Imagem" src="img/buque.jpg" alt="">
+                <h1 class="titulo">buque</h1>
             </div>
             <span>
             </span>
             <span>
             </span>
             <div class="div-imagem">
-                <img class="Imagem" src="img/lua.jpg" alt="">
-                <h1 class="titulo">Imagem 7</h1>
+                <img class="Imagem" src="img/flores.jpg" alt="">
+                <h1 class="titulo">flor</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/praia.jpg" alt="">
-                <h1 class="titulo">Imagem 8</h1>
+                <img class="Imagem" src="img/horta.jpg" alt="">
+                <h1 class="titulo">faça sua horta</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/universo.jpg" alt="">
-                <h1 class="titulo">Imagem 9</h1>
+                <img class="Imagem" src="img/arvore.jpg" alt="">
+                <h1 class="titulo">arvores</h1>
             </div>
         </div>
 
